--- a/airline_satisfaction_classification.Rmd
+++ b/airline_satisfaction_classification.Rmd
@@ -1,9 +1,7 @@
 ---
-title: 'AIRLINE PASSENGERS SATISFACTION: CLASSIFICATION'
-output:
-  html_document:
-    df_print: paged
-date: "16/06/2023"
+title: "AIRLINE PASSENGERS SATISFACTION: CLASSIFICATION"
+output: html_notebook
+date: 16/06/2023
 ---
 
 ## Database description
@@ -40,10 +38,15 @@ The goal of our analysis is trying to predict whether customers were overall sat
 1. **Data upload**
 2. **Exploratory analysis:**
     - missing values handling
-    - outliers analysis
-    - variables density
-    - customer satisfaction distribution for categorical variables
-    - customer satisfaction distribution for continuous variables
+    - outliers analysis:
+        + IQR method
+        + 3*SD method
+    - data cleaning
+    - descriptive analysis:
+        + satisfaction distribution
+        + customers information
+        + customer-generated variables
+        + numerical variables
     - correlation matrix
 3. **Train and test sets split**
 4. **Logistic regression:**
@@ -54,15 +57,13 @@ The goal of our analysis is trying to predict whether customers were overall sat
     - models selection (maybe one model per criteria if they differs)
     - models evaluation (accuracy, specificity, sensitivity, ...)
     - ROC curve
-5. **Linear/Quadratic Discriminant Analysis:**
-    - apply LDA
-    - apply QDA
-    - K-NN
-    - comparison between LDA, QDA, K-NN
+5. **Linear Discriminant Analysis:**
+    - ...
+    - compare LDA and logistic
 6. **Tree predictors:**
+    - ...
     - comparison with logistic model
 7. **Conclusion and Interpretation**
-    - compare LDA, QDA, logistic, K-NN
 
 
 ## Libraries
@@ -71,13 +72,20 @@ library(tidyverse)
 library(dplyr)
 library(ggplot2)
 library(grid)
+library(gridExtra)
 library(corrr)
+library(ggradar)
+library(scales)
+library(tibble)
+# ggradar needs to be installed from github 
+# > install.packages("remotes")
+# > remotes::install_github("ricardo-bion/ggradar")
 ```
 
 
-# 1) DATA
+# **1) DATA**
 ```{r}
-df <- read_csv("dataset/airline_passenger_satisfaction.csv")
+df <- read_csv("Database/airline_passenger_satisfaction.csv")
 ```
 
 ```{r}
@@ -98,7 +106,7 @@ summary(df)
 
 
 
-# 2) EXPLANATORY ANALYSIS
+# **2) EXPLANATORY ANALYSIS**
 
 ## Handling missing values
 ```{r}
@@ -143,7 +151,7 @@ sum(is.na(df$arrival_delay_in_minutes))
  
 ```{r}
 # Alternative df where the NA are remove instead
-df_na_deleted <- read_csv("dataset/airline_passenger_satisfaction.csv")
+df_na_deleted <- read_csv("Database/airline_passenger_satisfaction.csv")
 df_na_deleted <- na.omit(df_na_deleted)
 # df <- df_na_deleted
 ```
@@ -165,7 +173,9 @@ plot(df$arrival_delay_in_minutes, main = "Arrival Delay",
 
 ```
 [...]
- 
+
+
+## Inter Quantile Range method 
 ```{r}
 Q1 <- quantile(df$departure_delay_in_minutes, 0.25)
 Q3 <- quantile(df$departure_delay_in_minutes, 0.75)
@@ -202,8 +212,24 @@ The IQR method does not look suitable to identify outliers because it identify a
 [For now I don't really know which method to use for identify what outliers to remove]
 
 
+## SD method
+```{r}
+z_scores_dep <- scale(df$departure_delay_in_minutes)
+z_scores_arr <- scale(df$arrival_delay_in_minutes)
 
+outliers_dep <- which(abs(z_scores_dep) > 3)
+outliers_arr <- which(abs(z_scores_arr) > 3)
 
+sd_outliers_count_dep <- length(outliers_dep)
+sd_outliers_count_arr <- length(outliers_arr)
+
+c("Observations that falls over 3 times the sd (departure delay):", sd_outliers_count_dep)
+c("Percentage of outliers identified (departure delay):", sd_outliers_count_dep / length(df$departure_delay_in_minutes) * 100)
+
+c("Observations that falls over 3 times the sd (arrival delay):", sd_outliers_count_arr)
+c("Percentage of outliers identified (arrival delay):", sd_outliers_count_arr / length(df$arrival_delay_in_minutes) * 100)
+```
+Over 2% of the observations are identified as outliers using the standard deviation method
 
  
 ```{r}
@@ -212,6 +238,18 @@ plot(df$flight_distance, main = "Flight Distance",
 ```
 [...]
 
+```{r}
+z_scores_dist <- scale(df$flight_distance)
+
+outliers_dist <- which(abs(z_scores_dist) > 3)
+
+sd_outliers_count_dist <- length(outliers_dist)
+
+c("Observations that falls over 3 times the sd (flight distance):", sd_outliers_count_dist)
+c("Percentage of outliers identified (flight distance):", sd_outliers_count_dist / length(df$flight_distance) * 100)
+```
+
+[For now I will not remove any outliers]
 
 ```{r}
 # plot(df$age, main = "Customers' Age",
@@ -220,31 +258,224 @@ plot(df$flight_distance, main = "Flight Distance",
 ```
 
 
+
 ## Data cleaning
-[I'm gonna remove the ...1 column because it is just an extra index column]
+Deleting the *...1* column because it is just an extra index column
+```{r}
+df <- df[, -1]
+# df
+```
+Renaming Gender variable to gender for consistency
+```{r}
+df <- df %>% 
+  rename(gender = Gender)
+```
+
+ 
+ 
+ 
+# Descriptive analysis
+
+```{r}
+p_satisf <- ggplot(df, aes(x = satisfaction)) +
+  geom_bar(aes(fill = satisfaction)) +
+  geom_text(aes(y = ..count.., 
+                label = paste0(round(prop.table(..count..), 4) * 100, '%')), 
+            stat = 'count', 
+            position = position_dodge(0.3), 
+            size = 4,
+            vjust = - 0.5) +
+  scale_fill_manual(values = c("red", "green")) +
+  labs(title = "Satisfaction Distribution", y = "Count")
+
+p_satisf
+```
+
+### Define function to plot bar charts
+```{r}
+# Plot bar chart function
+plot_bar_chart <- function(df, var_name) {
+  var_name <- enquo(var_name)  # Defuse the var_name so it can be evaluated later
+
+  plot_var <- ggplot(df, aes(x = !!var_name)) +  # !! to inject the var_name back to evaluate it
+    geom_bar(aes(fill = satisfaction)) +
+    geom_text(aes(y = ..count.., 
+                  label = paste0(round(prop.table(..count..), 4) * 100, '%')), 
+              stat = 'count', 
+              position = position_dodge(0.3), 
+              size = 4,
+              vjust = -0.5) +
+    scale_fill_manual(values = c("red", "green")) +
+    labs(title = paste0("Satisfaction Distribution for ", quo_name(var_name)), 
+         x = quo_name(var_name), y = "Count")  # quo_name() to return the var_name as string
+
+  print(plot_var)
+}
+```
+
+
+### Customers information Variables
+```{r}
+# Gender
+plot_bar_chart(df, gender)
+
+# Age
+df$age_group <- cut(df$age, breaks = seq(0, max(df$age) + 10, by = 10), right = FALSE)
+plot_bar_chart(df, age_group)
+
+# Customer type
+plot_bar_chart(df, customer_type)
+
+# Type of travel
+plot_bar_chart(df, type_of_travel)
+
+# Customer class
+plot_bar_chart(df, customer_class)
+```
+
+
+### Customer-generated variables
+```{r}
+# Inflight Wifi service
+plot_bar_chart(df, inflight_wifi_service)
+
+# Departure/arrival time convenient
+plot_bar_chart(df, departure_arrival_time_convenient)
+
+# Ease of online booking
+plot_bar_chart(df, ease_of_online_booking)
+
+# Gate location
+plot_bar_chart(df, gate_location)
+
+# Food and drink
+plot_bar_chart(df, food_and_drink)
+
+# Online boarding
+plot_bar_chart(df, online_boarding)
+
+# Seat comfort
+plot_bar_chart(df, seat_comfort)
+
+# Inflight entertainment
+plot_bar_chart(df, inflight_entertainment)
+
+# Onboard service
+plot_bar_chart(df, onboard_service)
+
+# Leg room service
+plot_bar_chart(df, leg_room_service)
+
+# Baggage handling
+plot_bar_chart(df, baggage_handling)
+
+# Check-in service
+plot_bar_chart(df, checkin_service)
+
+# Inflight service
+plot_bar_chart(df, inflight_service)
+
+# Cleanliness
+plot_bar_chart(df, cleanliness)
+
+```
+
+
+### Numerical Variables
+```{r}
+# Flight distance
+p_distance <- ggplot(data = df, aes(flight_distance, color = satisfaction)) +
+  geom_freqpoly(binwidth = 100, linewidth = 1) +
+  scale_color_manual(values = c("red", "green")) +
+  labs(title = "Satisfaction distribution for Flight distance")
+
+# Distance density
+p_distancr_den <- ggplot(df, aes(x = flight_distance, fill = satisfaction)) +
+  geom_density(alpha = 0.5) + 
+  labs(title = "Density Plot of Flight distance", 
+       x = "flight_distance", y = "Density") + 
+  scale_fill_manual(values = c("red", "green"), name = "Satisfaction")
+
+grid.arrange(p_distance, p_distancr_den)
+
+# Departure delay
+# I selected delays under 200 min otherwise the graphs look even worse than these
+p_dep_del <- ggplot(data = df[df$departure_delay_in_minutes < 200, ], 
+                    aes(departure_delay_in_minutes, color = satisfaction)) +
+  geom_freqpoly(binwidth = 15, linewidth = 0.7) +
+  scale_color_manual(values = c("red", "green")) +
+  labs(title = "Satisfaction distribution for Departure delay")
+p_dep_del
+
+# Arrival delay
+p_arr_del <- ggplot(data = df[df$arrival_delay_in_minutes < 200, ], 
+                    aes(arrival_delay_in_minutes, color = satisfaction)) +
+  geom_freqpoly(binwidth = 15, linewidth = 0.7) +
+  scale_color_manual(values = c("red", "green")) +
+  labs(title = "Satisfaction distribution for Arrival distance")
+p_arr_del
+
+```
+ 
+
+
+# Correlation matrix for the customer-generated variables
+```{r}
+correlation_matrix <- df %>% 
+  select(inflight_wifi_service,departure_arrival_time_convenient, 
+         ease_of_online_booking, gate_location, food_and_drink, online_boarding,
+         seat_comfort, inflight_entertainment, onboard_service, leg_room_service,
+         baggage_handling, checkin_service, inflight_service, cleanliness) %>% 
+  cor()
+
+round(correlation_matrix, 3)
+```
+
+### Heatmap
+```{r}
+heatmap(correlation_matrix, 
+        col = colorRampPalette(c("blue", "white", "red"))(1000),
+        main = "Correlation Heatmap", Colv = NA, margins = c(15, 9))
+
+```
 
 
 
 
+## Radar map
+```{r}
+exclude_cols <- c("gender", "customer_type", "age", "type_of_travel", 
+                  "customer_class", "flight_distance", 
+                  "departure_delay_in_minutes", "arrival_delay_in_minutes") 
+                  
 
+df_mean <- df %>%
+  select(-exclude_cols) %>%
+  group_by(satisfaction) %>%
+  summarize(across(any_of(names(.)[sapply(., is.numeric) | sapply(., is.logical)]), 
+                   ~ mean(., na.rm = TRUE)))
+df_mean
 
+```
+```{r}
+# df_mean[, 2:15]
 
+radarchart(rbind(rep(5, 14), rep(0, 14), df_mean[, 2:15]),
+           vlabels = colnames(df_mean[, 2:15]))
+```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```{r}
+ggradar(df_mean, grid.min = 0, grid.max = 5, 
+        axis.label.size = 3,
+        group.point.size = 3,
+        group.line.width = 1) +
+  theme(legend.position = c(1, 0),
+        legend.spacing = unit(c(0, 0, 0, 0), "lines"),
+        legend.key.size = unit(c(0, 0, 0, 0), "lines"),
+        legend.text = element_text(size = 7),
+        plot.margin = unit(c(2, 8, 2, 8), "lines")) +
+  scale_color_manual(values = c("red", "green"))
+```
 
 
 
